disable unwanted plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,20 +276,20 @@ if(WIN32)
     add_definitions(-DWIN32)
 endif()
 
-add_subdirectory(chua)
+#add_subdirectory(chua)
 add_subdirectory(faustcsound)
-add_subdirectory(image)
-add_subdirectory(py)
-add_subdirectory(widgets)
-add_subdirectory(AbletonLinkOpcodes)
-add_subdirectory(stk)
-add_subdirectory(CUDA)
-add_subdirectory(opencl)
-add_subdirectory(websockets)
-add_subdirectory(hdf5)
-add_subdirectory(linear_algebra)
-add_subdirectory(mp3)
-add_subdirectory(wiimote)
-add_subdirectory(p5glove)
-add_subdirectory(jackops)
-add_subdirectory(fluidOpcodes)
+#add_subdirectory(image)
+#add_subdirectory(py)
+#add_subdirectory(widgets)
+#add_subdirectory(AbletonLinkOpcodes)
+#add_subdirectory(stk)
+#add_subdirectory(CUDA)
+#add_subdirectory(opencl)
+#add_subdirectory(websockets)
+#add_subdirectory(hdf5)
+#add_subdirectory(linear_algebra)
+#add_subdirectory(mp3)
+#add_subdirectory(wiimote)
+#add_subdirectory(p5glove)
+#add_subdirectory(jackops)
+#add_subdirectory(fluidOpcodes)
