Adding julian plugin dir, and caoscil family of opcodes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,3 +293,4 @@ add_subdirectory(faustcsound)
 #add_subdirectory(p5glove)
 #add_subdirectory(jackops)
 #add_subdirectory(fluidOpcodes)
+add_subdirectory(julian)
